--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,11 +17,13 @@
   "author": "Arnab Ghosh",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "stripe": "^14.24.0"
   }
 }
