--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "dev": "nodemon -r dotenv/config src/server.js"
   },
   "keywords": [
     "eazybuy",
@@ -17,12 +17,15 @@
   "author": "Arnab Ghosh",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.1.0",
+    "cloudinary-build-url": "^0.2.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "stripe": "^14.24.0"
   }
