--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,10 +17,11 @@
   "author": "Arnab Ghosh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.1.0",
     "cloudinary-build-url": "^0.2.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
